[gd_scene load_steps=4 format=3 uid="uid://b6ovxc744bjwk"]

[ext_resource type="Script" uid="uid://kp8w3a20kbnb" path="res://scripts/main_menu.gd" id="1_0ykhv"]
[ext_resource type="StyleBox" uid="uid://dokl011h350b2" path="res://assets/styles/Window.tres" id="1_2wh52"]
[ext_resource type="PackedScene" uid="uid://bryp0fjw86bk1" path="res://scenes/general/Button.tscn" id="1_yqorp"]

[node name="MainMenu" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_2wh52")
script = ExtResource("1_0ykhv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="Start" parent="VBoxContainer" instance=ExtResource("1_yqorp")]
layout_mode = 2
text = "Start"

[node name="Leaderboard" parent="VBoxContainer" instance=ExtResource("1_yqorp")]
layout_mode = 2
text = "Leaderboard"

[node name="Options" parent="VBoxContainer" instance=ExtResource("1_yqorp")]
layout_mode = 2
text = "Options"

[node name="Quit" parent="VBoxContainer" instance=ExtResource("1_yqorp")]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
